# gdal_bathy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bathymetry.cpp  bathymetry.h  bootstrap-windows.ps1  gsf.7z  run_tests3.bat  run_tests_deps.bat  vcpkg.json
cmake/: copy_runtime_deps.cmake
scripts/: collect-windows-dlls.ps1
test/: test_bathymetry.cpp
test/data/bag/: synth_v100_no_crs.bag  synth_v101_geographic.bag  synth_v101_geographic.bag.aux.xml  synth_v110_utm.bag  synth_v151_nominal.bag  synth_v200_projected.bag  true_n_nominal.bag.aux.xml
test/data/gsf/: synthetic.gsf
test/data/tif/: synthetic.tif
test/data/xyz/: sample.xyz
windows-deps/: README.md
windows-deps/gdal/: README.txt
windows-deps/hdf5/: README.txt
windows-deps/proj/: README.txt
